[package]
name = "fame-program"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "fame_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["init-if-needed"] }
anchor-spl = {version = "0.29.0", features = ["metadata"]}
raydium-contract-instructions = { git = "https://github.com/raydium-io/raydium-contract-instructions.git" }